--- a/chamber/styles/mainchamber.css
+++ b/chamber/styles/mainchamber.css
@@ -391,17 +391,18 @@ footer {
 
 /* Join Page Styling */
 
+
 .form-dialog__container {
   display: grid;
   gap: 20px;
   margin: 0 auto 20px;
-  width: 95%;
+  width: 100%;
 }
 
 .join__main h1 {
   margin: 15px 0;
   text-align: center;
-  color: #C8C8FF;
+  color:#000000;
   font-size: 1.5rem;
 }
 
@@ -409,8 +410,7 @@ footer {
   max-width: 500px;
   border-radius: 5px;
   padding: 1.2em;
-  background-color: #276c7361;
-  color: #C8C8FF;
+  background-color: #62686461;
   display: grid;
   gap: 15px;
 }
@@ -420,7 +420,7 @@ footer {
 }
 
 .form legend {
-  color: #d0f05c;
+  color: #004225;
   font-size: 1.5rem;
 }
 
@@ -431,7 +431,7 @@ footer {
 }
 
 .form label span {
-  color: #fed7fd;
+  color: rgb(158, 7, 7);
 }
 
 .form label:has(textarea),
@@ -458,14 +458,16 @@ footer {
 .form input[type=submit] {
   font-weight: bold;
   font-size: 1.2rem;
-  color: #003049;
+  color: #FFFFFF;
+  background-color: #004225;
   cursor: pointer;
   height: 3em;
   -webkit-tap-highlight-color: transparent;
 }
 
 .form input[type=submit]:active {
-  color: #FBAA00;
+  color: #FFFFFF;
+  background-color:#004225;
 }
 
 .form input:focus,
@@ -485,7 +487,7 @@ footer {
   width: 100%;
   max-width: 500px;
   background-color: #276c7361;
-  color: #d0f05c;
+  color: #FFFFFF;
   border-radius: 5px;
   padding: 1.2em;
 }
@@ -496,8 +498,8 @@ footer {
 
 .section2 h2,
 .section1 h2 {
-  color: #C8C8FF;
-  background-color: #003049;
+  color: #FFFFFF;
+  background-color:#004225;
   text-align: center;
   border-radius: 5px;
   padding: .4em .8em;
